@@ -58,6 +58,9 @@ Other Changes
 
 * SOLR-6954: Deprecated SolrClient.shutdown() method removed (Alan Woodward)
 
+* SOLR-7355: Switch from Google's ConcurrentLinkedHashMap to Caffeine.  Only
+  affects HDFS support. (Ben Manes via Shawn Heisey)
+
 ==================  5.2.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
